Updated citation keys

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,98 +1,80 @@
 
+@inproceedings{vissers2014crying,
+  title = {Crying Wolf? On the Price Discrimination of Online Airline Tickets},
+  url = {https://hal.inria.fr/hal-01081034/},
+  shorttitle = {Crying Wolf?},
+  timestamp = {2017-03-10T14:30:14Z},
+  booktitle = {7th {{Workshop}} on {{Hot Topics}} in {{Privacy Enhancing Technologies}} ({{HotPETs}} 2014)},
+  author = {Vissers, Thomas and Nikiforakis, Nick and Bielova, Nataliia and Joosen, Wouter},
+  urldate = {2017-02-10},
+  date = {2014},
+  file = {[PDF] inria.fr:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/453VU848/Vissers et al. - 2014 - Crying wolf on the price discrimination of online.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/HIEIBPNI/hal-01081034.html:text/html}
+}
+
 @inproceedings{baumann2016disguised,
   title = {Disguised {{Chromium Browser}}: {{Robust Browser}}, {{Flash}} and {{Canvas Fingerprinting Protection}}},
   url = {http://dl.acm.org/citation.cfm?id=2994621},
   shorttitle = {Disguised {{Chromium Browser}}},
-  timestamp = {2017-02-04T14:19:20Z},
+  timestamp = {2017-03-10T14:30:14Z},
   booktitle = {Proceedings of the 2016 {{ACM}} on {{Workshop}} on {{Privacy}} in the {{Electronic Society}}},
   publisher = {{ACM}},
   author = {Baumann, Peter and Katzenbeisser, Stefan and Stopczynski, Martin and Tews, Erik},
   urldate = {2017-02-04},
   date = {2016},
   pages = {37--46},
-  file = {[PDF] datenzone.de:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/H8I8PC27/Baumann et al. - 2016 - Disguised Chromium Browser Robust Browser, Flash .pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/3ZNVZ3U9/citation.html:text/html},
-  groups = {Fingerprint}
+  file = {[PDF] datenzone.de:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/6CN2TPA8/Baumann et al. - 2016 - Disguised Chromium Browser Robust Browser, Flash .pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/BK873DCB/citation.html:text/html}
 }
 
-@inproceedings{englehardt2016online,
-  title = {Online Tracking: {{A}} 1-Million-Site Measurement and Analysis},
-  url = {http://dl.acm.org/citation.cfm?id=2978313},
-  shorttitle = {Online Tracking},
-  timestamp = {2017-02-04T14:20:54Z},
-  booktitle = {Proceedings of the 2016 {{ACM SIGSAC Conference}} on {{Computer}} and {{Communications Security}}},
-  publisher = {{ACM}},
-  author = {Englehardt, Steven and Narayanan, Arvind},
-  urldate = {2017-02-04},
-  date = {2016},
-  pages = {1388--1401},
-  file = {[PDF] ftc.gov:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/W7865ZKU/Englehardt and Narayanan - 2016 - Online tracking A 1-million-site measurement and .pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/2IAT7H52/citation.html:text/html},
-  groups = {Fingerprint}
+@article{melicher2015not,
+  title = {({{Do Not}}) {{Track Me Sometimes}}: {{Users}}' {{Contextual Preferences}} for {{Web Tracking}}},
+  volume = {2016},
+  issn = {2299-0984},
+  url = {https://www.degruyter.com/view/j/popets.2015.2016.issue-2/popets-2016-0009/popets-2016-0009.xml},
+  doi = {10.1515/popets-2016-0009},
+  shorttitle = {({{Do Not}}) {{Track Me Sometimes}}},
+  abstract = {Online trackers compile profiles on users for targeting ads, customizing websites, and selling users' information. In this paper, we report on the first detailed study of the perceived benefits and risks of tracking-and the reasons behind them-conducted in the context of users' own browsing histories. Prior work has studied this in the abstract; in contrast, we collected browsing histories from and interviewed 35 people about the perceived benefits and risks of online tracking in the context of their own browsing behavior. We find that many users want more control over tracking and think that controlled tracking has benefits, but are unwilling to put in the effort to control tracking or distrust current tools. We confirm previous findings that users' general attitudes about tracking are often at odds with their comfort in specific situations. We also identify specific situational factors that contribute to users' preferences about online tracking and explore how and why. Finally, we examine a sample of popular tools for controlling tracking and show that they only partially address the situational factors driving users' preferences.We suggest opportunities to improve such tools, and explore the use of a classifier to automatically determine whether a user would be comfortable with tracking on a particular page visit; our results suggest this is a promising direction for future work.},
+  timestamp = {2017-03-10T14:30:14Z},
+  number = {2},
+  journaltitle = {Proceedings on Privacy Enhancing Technologies},
+  author = {Melicher, William and Sharif, Mahmood and Tan, Joshua and Bauer, Lujo and Christodorescu, Mihai and Leon, Pedro Giovanni},
+  urldate = {2017-03-04},
+  date = {2015},
+  pages = {135--154},
+  file = {Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/ZD8TBX6D/Melicher et al. - 2015 - (Do Not) Track Me Sometimes Users’ Contextual Pre.pdf:application/pdf}
 }
 
-@inproceedings{torres2015fp-block:,
+@inproceedings{torres2015fpblock,
   title = {{{FP}}-{{Block}}: Usable Web Privacy by Controlling Browser Fingerprinting},
   url = {http://link.springer.com/chapter/10.1007/978-3-319-24177-7_1},
   shorttitle = {{{FP}}-{{Block}}},
-  timestamp = {2017-02-04T14:22:36Z},
+  timestamp = {2017-03-10T14:30:14Z},
   booktitle = {European {{Symposium}} on {{Research}} in {{Computer Security}}},
   publisher = {{Springer}},
   author = {Torres, Christof Ferreira and Jonker, Hugo and Mauw, Sjouke},
   urldate = {2017-02-04},
   date = {2015},
   pages = {3--19},
-  file = {[PDF] uni.lu:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/5CFHKKDW/Torres et al. - 2015 - FP-Block usable web privacy by controlling browse.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/823M27KJ/978-3-319-24177-7_1.html:text/html},
-  groups = {Fingerprint}
+  file = {[PDF] uni.lu:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/NGJ289IX/Torres et al. - 2015 - FP-Block usable web privacy by controlling browse.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/9TBGN7FG/978-3-319-24177-7_1.html:text/html}
 }
 
-@inproceedings{vissers2014crying,
-  title = {Crying Wolf? On the Price Discrimination of Online Airline Tickets},
-  url = {https://hal.inria.fr/hal-01081034/},
-  shorttitle = {Crying Wolf?},
-  timestamp = {2017-02-10T13:02:19Z},
-  booktitle = {7th {{Workshop}} on {{Hot Topics}} in {{Privacy Enhancing Technologies}} ({{HotPETs}} 2014)},
-  author = {Vissers, Thomas and Nikiforakis, Nick and Bielova, Nataliia and Joosen, Wouter},
-  urldate = {2017-02-10},
-  date = {2014},
-  file = {[PDF] inria.fr:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/6C4SKNPP/Vissers et al. - 2014 - Crying wolf on the price discrimination of online.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/T7QMFJK9/hal-01081034.html:text/html},
-  groups = {Fingerprint}
-}
-
-@inproceedings{juarez2016efficient,
-  title = {Toward an {{Efficient Website Fingerprinting Defense}}},
-  url = {http://link.springer.com.ezproxy.elib10.ub.unimaas.nl/chapter/10.1007/978-3-319-45744-4_2},
-  eventtitle = {European Symposium on Research in Computer Security},
-  timestamp = {2017-02-24T11:24:27Z},
-  langid = {english},
-  booktitle = {Computer {{Security}} – {{ESORICS}} 2016},
-  publisher = {{Springer, Cham}},
-  author = {Juarez, Marc and Imani, Mohsen and Perry, Mike and Diaz, Claudia and Wright, Matthew},
-  urldate = {2017-02-04},
-  date = {2016-09-26},
-  pages = {27--46},
-  file = {Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/JJUEERQ7/Juarez et al. - 2016 - Toward an Efficient Website Fingerprinting Defense.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/6J8EAQPC/10.html:text/html},
-  groups = {Fingerprint},
-  doi = {10.1007/978-3-319-45744-4_2}
-}
-
-@article{sood2011malvertising,
-  title = {Malvertising – Exploiting Web Advertising},
-  volume = {2011},
-  issn = {1361-3723},
-  url = {http://www.sciencedirect.com/science/article/pii/S1361372311700410},
-  doi = {10.1016/S1361-3723(11)70041-0},
-  abstract = {Online advertisements provide a convenient platform for spreading malware. Since ads provide a significant portion of revenue on the web, significant effort is put into attracting users to them. Malicious agents take advantage of this skillful attraction and then redirect users to malicious sites that serve malware.
-Advertisers use Web 2.0 functionality to provide flexibility and portability in sharing third-party content across different networks, websites and blogs. They use widgets, frames and Javascript banners in order to load and execute content from ad servers into user websites. But attackers can take advantage of flaws in features such as widgets and iframes to redirect browsers to malicious websites that deliver malware.
-To appreciate the severity and prevalence of this class of attack, the Open Web Application Security Project (OWASP.org) recently placed invalidated redirects and forwards in its ‘2010 top 10’ list. Aditya Sood and Richard Enbody of Michigan State University discuss the exploitation model of malvertisements and the way different modes of attacks are used to infect users.},
-  timestamp = {2017-02-25T09:53:34Z},
-  number = {4},
-  journaltitle = {Computer Fraud \& Security},
-  shortjournal = {Computer Fraud \& Security},
-  author = {Sood, Aditya K and Enbody, Richard J},
-  urldate = {2017-02-25},
-  date = {2011-04},
-  pages = {11--16},
-  file = {ScienceDirect Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/7RCWNJD7/Sood and Enbody - 2011 - Malvertising – exploiting web advertising.pdf:application/pdf;ScienceDirect Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/HHKH9EE8/S1361372311700410.html:text/html},
-  groups = {Fingerprint}
+@inproceedings{acar2013fpdetective,
+  location = {{New York, NY, USA}},
+  title = {{{FPDetective}}: {{Dusting}} the {{Web}} for {{Fingerprinters}}},
+  isbn = {978-1-4503-2477-9},
+  url = {http://doi.acm.org/10.1145/2508859.2516674},
+  doi = {10.1145/2508859.2516674},
+  shorttitle = {{{FPDetective}}},
+  abstract = {In the modern web, the browser has emerged as the vehicle of choice, which users are to trust, customize, and use, to access a wealth of information and online services. However, recent studies show that the browser can also be used to invisibly fingerprint the user: a practice that may have serious privacy and security implications. In this paper, we report on the design, implementation and deployment of FPDetective, a framework for the detection and analysis of web-based fingerprinters. Instead of relying on information about known fingerprinters or third-party-tracking blacklists, FPDetective focuses on the detection of the fingerprinting itself. By applying our framework with a focus on font detection practices, we were able to conduct a large scale analysis of the million most popular websites of the Internet, and discovered that the adoption of fingerprinting is much higher than previous studies had estimated. Moreover, we analyze two countermeasures that have been proposed to defend against fingerprinting and find weaknesses in them that might be exploited to bypass their protection. Finally, based on our findings, we discuss the current understanding of fingerprinting and how it is related to Personally Identifiable Information, showing that there needs to be a change in the way users, companies and legislators engage with fingerprinting.},
+  timestamp = {2017-03-10T14:30:14Z},
+  booktitle = {Proceedings of the 2013 {{ACM SIGSAC Conference}} on {{Computer}} \& {{Communications Security}}},
+  series = {CCS '13},
+  publisher = {{ACM}},
+  author = {Acar, Gunes and Juarez, Marc and Nikiforakis, Nick and Diaz, Claudia and G{\"u}rses, Seda and Piessens, Frank and Preneel, Bart},
+  urldate = {2017-03-04},
+  date = {2013},
+  pages = {1129--1140},
+  keywords = {device fingerprinting,dynamic analysis,flash,javascript,privacy,tracking,web security},
+  file = {ACM Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/AQCITD92/Acar et al. - 2013 - FPDetective Dusting the Web for Fingerprinters.pdf:application/pdf}
 }
 
 @inproceedings{li2012knowing,
@@ -103,7 +85,7 @@ To appreciate the severity and prevalence of this class of attack, the Open Web 
   doi = {10.1145/2382196.2382267},
   shorttitle = {Knowing {{Your Enemy}}},
   abstract = {With the Internet becoming the dominant channel for marketing and promotion, online advertisements are also increasingly used for illegal purposes such as propagating malware, scamming, click frauds, etc. To understand the gravity of these malicious advertising activities, which we call malvertising, we perform a large-scale study through analyzing ad-related Web traces crawled over a three-month period. Our study reveals the rampancy of malvertising: hundreds of top ranking Web sites fell victims and leading ad networks such as DoubleClick were infiltrated. To mitigate this threat, we identify prominent features from malicious advertising nodes and their related content delivery paths, and leverage them to build a new detection system called MadTracer. MadTracer automatically generates detection rules and utilizes them to inspect advertisement delivery processes and detect malvertising activities. Our evaluation shows that MadTracer was capable of capturing a large number of malvertising cases, 15 times as many as Google Safe Browsing and Microsoft Forefront did together, at a low false detection rate. It also detected new attacks, including a type of click-fraud attack that has never been reported before.},
-  timestamp = {2017-02-25T10:50:02Z},
+  timestamp = {2017-03-10T14:30:14Z},
   booktitle = {Proceedings of the 2012 {{ACM Conference}} on {{Computer}} and {{Communications Security}}},
   series = {CCS '12},
   publisher = {{ACM}},
@@ -112,8 +94,41 @@ To appreciate the severity and prevalence of this class of attack, the Open Web 
   date = {2012},
   pages = {674--686},
   keywords = {malvertising,online advertising,statistical learning},
-  file = {ACM Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/7G4JWQ4X/Li et al. - 2012 - Knowing Your Enemy Understanding and Detecting Ma.pdf:application/pdf},
-  groups = {Fingerprint}
+  file = {ACM Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/TGZ92DGX/Li et al. - 2012 - Knowing Your Enemy Understanding and Detecting Ma.pdf:application/pdf}
+}
+
+@article{sood2011malvertising,
+  title = {Malvertising \textendash{} Exploiting Web Advertising},
+  volume = {2011},
+  issn = {1361-3723},
+  url = {http://www.sciencedirect.com/science/article/pii/S1361372311700410},
+  doi = {10.1016/S1361-3723(11)70041-0},
+  abstract = {Online advertisements provide a convenient platform for spreading malware. Since ads provide a significant portion of revenue on the web, significant effort is put into attracting users to them. Malicious agents take advantage of this skillful attraction and then redirect users to malicious sites that serve malware.
+Advertisers use Web 2.0 functionality to provide flexibility and portability in sharing third-party content across different networks, websites and blogs. They use widgets, frames and Javascript banners in order to load and execute content from ad servers into user websites. But attackers can take advantage of flaws in features such as widgets and iframes to redirect browsers to malicious websites that deliver malware.
+To appreciate the severity and prevalence of this class of attack, the Open Web Application Security Project (OWASP.org) recently placed invalidated redirects and forwards in its `2010 top 10' list. Aditya Sood and Richard Enbody of Michigan State University discuss the exploitation model of malvertisements and the way different modes of attacks are used to infect users.},
+  timestamp = {2017-03-10T14:30:14Z},
+  number = {4},
+  journaltitle = {Computer Fraud \& Security},
+  shortjournal = {Computer Fraud \& Security},
+  author = {Sood, Aditya K and Enbody, Richard J},
+  urldate = {2017-02-25},
+  date = {2011-04},
+  pages = {11--16},
+  file = {ScienceDirect Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/K7F9GM6S/Sood and Enbody - 2011 - Malvertising – exploiting web advertising.pdf:application/pdf;ScienceDirect Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/ZRMJRJTF/S1361372311700410.html:text/html}
+}
+
+@inproceedings{englehardt2016online,
+  title = {Online Tracking: {{A}} 1-Million-Site Measurement and Analysis},
+  url = {http://dl.acm.org/citation.cfm?id=2978313},
+  shorttitle = {Online Tracking},
+  timestamp = {2017-03-10T14:30:14Z},
+  booktitle = {Proceedings of the 2016 {{ACM SIGSAC Conference}} on {{Computer}} and {{Communications Security}}},
+  publisher = {{ACM}},
+  author = {Englehardt, Steven and Narayanan, Arvind},
+  urldate = {2017-02-04},
+  date = {2016},
+  pages = {1388--1401},
+  file = {[PDF] ftc.gov:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/342F6T24/Englehardt and Narayanan - 2016 - Online tracking A 1-million-site measurement and .pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/GSK7I9UV/citation.html:text/html}
 }
 
 @article{nikiforakis2014workings,
@@ -122,7 +137,7 @@ To appreciate the severity and prevalence of this class of attack, the Open Web 
   issn = {1540-7993},
   url = {http://ieeexplore.ieee.org/document/6679044/},
   doi = {10.1109/MSP.2013.160},
-  timestamp = {2017-03-04T12:58:56Z},
+  timestamp = {2017-03-10T14:30:14Z},
   number = {3},
   journaltitle = {IEEE Security \& Privacy},
   author = {Nikiforakis, Nick and Kapravelos, Alexandros and Joosen, Wouter and Kruegel, Christopher and Piessens, Frank and Vigna, Giovanni},
@@ -131,24 +146,20 @@ To appreciate the severity and prevalence of this class of attack, the Open Web 
   pages = {28--36}
 }
 
-@inproceedings{acar2013fpdetective:,
-  location = {{New York, NY, USA}},
-  title = {{{FPDetective}}: {{Dusting}} the {{Web}} for {{Fingerprinters}}},
-  isbn = {978-1-4503-2477-9},
-  url = {http://doi.acm.org/10.1145/2508859.2516674},
-  doi = {10.1145/2508859.2516674},
-  shorttitle = {{{FPDetective}}},
-  abstract = {In the modern web, the browser has emerged as the vehicle of choice, which users are to trust, customize, and use, to access a wealth of information and online services. However, recent studies show that the browser can also be used to invisibly fingerprint the user: a practice that may have serious privacy and security implications. In this paper, we report on the design, implementation and deployment of FPDetective, a framework for the detection and analysis of web-based fingerprinters. Instead of relying on information about known fingerprinters or third-party-tracking blacklists, FPDetective focuses on the detection of the fingerprinting itself. By applying our framework with a focus on font detection practices, we were able to conduct a large scale analysis of the million most popular websites of the Internet, and discovered that the adoption of fingerprinting is much higher than previous studies had estimated. Moreover, we analyze two countermeasures that have been proposed to defend against fingerprinting and find weaknesses in them that might be exploited to bypass their protection. Finally, based on our findings, we discuss the current understanding of fingerprinting and how it is related to Personally Identifiable Information, showing that there needs to be a change in the way users, companies and legislators engage with fingerprinting.},
-  timestamp = {2017-03-04T13:11:01Z},
-  booktitle = {Proceedings of the 2013 {{ACM SIGSAC Conference}} on {{Computer}} \& {{Communications Security}}},
-  series = {CCS '13},
-  publisher = {{ACM}},
-  author = {Acar, Gunes and Juarez, Marc and Nikiforakis, Nick and Diaz, Claudia and Gürses, Seda and Piessens, Frank and Preneel, Bart},
-  urldate = {2017-03-04},
-  date = {2013},
-  pages = {1129--1140},
-  keywords = {device fingerprinting,dynamic analysis,flash,javascript,privacy,tracking,web security},
-  file = {ACM Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/UZD4D2NZ/Acar et al. - 2013 - FPDetective Dusting the Web for Fingerprinters.pdf:application/pdf}
+@inproceedings{juarez2016efficient,
+  title = {Toward an {{Efficient Website Fingerprinting Defense}}},
+  url = {http://link.springer.com.ezproxy.elib10.ub.unimaas.nl/chapter/10.1007/978-3-319-45744-4_2},
+  eventtitle = {European Symposium on Research in Computer Security},
+  timestamp = {2017-03-10T14:30:14Z},
+  langid = {english},
+  booktitle = {Computer {{Security}} \textendash{} {{ESORICS}} 2016},
+  publisher = {{Springer, Cham}},
+  author = {Juarez, Marc and Imani, Mohsen and Perry, Mike and Diaz, Claudia and Wright, Matthew},
+  urldate = {2017-02-04},
+  date = {2016-09-26},
+  pages = {27--46},
+  file = {Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/7BCIAZ4J/Juarez et al. - 2016 - Toward an Efficient Website Fingerprinting Defense.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/ASEQIAZA/10.html:text/html},
+  doi = {10.1007/978-3-319-45744-4_2}
 }
 
 @inproceedings{boda2011user,
@@ -157,33 +168,15 @@ To appreciate the severity and prevalence of this class of attack, the Open Web 
   doi = {10.1007/978-3-642-29615-4_4},
   abstract = {The techniques of tracking users through their web browsers have greatly evolved since the birth of the World Wide Web, posing an increasingly significant privacy risk. An important branch of these methods, called fingerprinting, is getting more and more attention, because it does not rely on client-side information storage, in contrast to cookie-like techniques. In this paper, we propose a new, browser-independent fingerprinting method. We have tested it on a data set of almost a thousand records, collected through a publicly accessible test website. We have shown that a part of the IP address, the availability of a specific font set, the time zone, and the screen resolution are enough to uniquely identify most users of the five most popular web browsers, and that user agent strings are fairly effective but fragile identifiers of a browser instance.},
   eventtitle = {Nordic Conference on Secure IT Systems},
-  timestamp = {2017-03-04T13:35:27Z},
+  timestamp = {2017-03-10T14:30:14Z},
   langid = {english},
   booktitle = {Information {{Security Technology}} for {{Applications}}},
   publisher = {{Springer, Berlin, Heidelberg}},
-  author = {Boda, Károly and Földes, Ádám Máté and Gulyás, Gábor György and Imre, Sándor},
+  author = {Boda, K{\'a}roly and F{\"o}ldes, {\'A}d{\'a}m M{\'a}t{\'e} and Guly{\'a}s, G{\'a}bor Gy{\"o}rgy and Imre, S{\'a}ndor},
   urldate = {2017-03-04},
   date = {2011-10-26},
   pages = {31--46},
-  file = {Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/APJXGRII/Boda et al. - 2011 - User Tracking on the Web via Cross-Browser Fingerp.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/B5852VD2/10.html:text/html}
-}
-
-@article{melicher2015(do,
-  title = {({{Do Not}}) {{Track Me Sometimes}}: {{Users}}’ {{Contextual Preferences}} for {{Web Tracking}}},
-  volume = {2016},
-  issn = {2299-0984},
-  url = {https://www.degruyter.com/view/j/popets.2015.2016.issue-2/popets-2016-0009/popets-2016-0009.xml},
-  doi = {10.1515/popets-2016-0009},
-  shorttitle = {({{Do Not}}) {{Track Me Sometimes}}},
-  abstract = {Online trackers compile profiles on users for targeting ads, customizing websites, and selling users’ information. In this paper, we report on the first detailed study of the perceived benefits and risks of tracking-and the reasons behind them-conducted in the context of users’ own browsing histories. Prior work has studied this in the abstract; in contrast, we collected browsing histories from and interviewed 35 people about the perceived benefits and risks of online tracking in the context of their own browsing behavior. We find that many users want more control over tracking and think that controlled tracking has benefits, but are unwilling to put in the effort to control tracking or distrust current tools. We confirm previous findings that users’ general attitudes about tracking are often at odds with their comfort in specific situations. We also identify specific situational factors that contribute to users’ preferences about online tracking and explore how and why. Finally, we examine a sample of popular tools for controlling tracking and show that they only partially address the situational factors driving users’ preferences.We suggest opportunities to improve such tools, and explore the use of a classifier to automatically determine whether a user would be comfortable with tracking on a particular page visit; our results suggest this is a promising direction for future work.},
-  timestamp = {2017-03-04T13:51:46Z},
-  number = {2},
-  journaltitle = {Proceedings on Privacy Enhancing Technologies},
-  author = {Melicher, William and Sharif, Mahmood and Tan, Joshua and Bauer, Lujo and Christodorescu, Mihai and Leon, Pedro Giovanni},
-  urldate = {2017-03-04},
-  date = {2015},
-  pages = {135--154},
-  file = {Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/G8NA8NQX/Melicher et al. - 2015 - (Do Not) Track Me Sometimes Users’ Contextual Pre.pdf:application/pdf}
+  file = {Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/UBGBCAEW/Boda et al. - 2011 - User Tracking on the Web via Cross-Browser Fingerp.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/4DQSW5CH/10.html:text/html}
 }
 
 
