--- a/content/content.tex
+++ b/content/content.tex
@@ -31,7 +31,7 @@ They do this by storing the fingerprints
 of every user of their created browser
 on a server and using these \textit{real} fingerprints to substitute others.
 With FP-Block fingerprints are really generated.
-\cite{torres2015fp-block:}
+\cite{torres2015fpblock}
 By making use of Markov chains they make sure
 that each generated fingerprint is a plausible one.
 
@@ -121,11 +121,11 @@ This article discusses basic fingerprinting
 by making use of only IP address, fonts, timezone and screen resolution.
 \cite{boda2011user}
 
-\section{Tracking preferences}
+\subsection{Tracking preferences}
 
 Mostly directed towards the perception by users of being tracked
 and their preference therein.
-\cite{melicher2015(do}
+\cite{melicher2015not}
 They also discuss current tools to take control over you being tracked
 and their limitations.
 Concluding with a suggestion on how to determine
