Revert "Date and version weren't visible"
This reverts commit bc1d6e938ec58aa1068511efe41fe0766841c322.

--- a/front-back/title.tex
+++ b/front-back/title.tex
@@ -12,6 +12,6 @@
 %  \\
   IM0502 -- Voorbereiden Afstuderen -- Master Software Engineering\\
   \affaddr{Open Universiteit Nederland},\\
-  \affaddr{faculteit Management, Science \& Technology}\\
-  \today\\v0.2}
+  \affaddr{faculteit Management, Science \& Technology}}
+\date{\today\\v0.2}
 \maketitle
