--- a/thesis-config.sty
+++ b/thesis-config.sty
@@ -1,7 +1,7 @@
 \ProvidesPackage{thesis-config}
 
 \usepackage[utf8]{inputenc}
-\usepackage[colorlinks]{hyperref}
+\usepackage[colorlinks, citecolor=blue]{hyperref}
 \usepackage{graphicx}
 %\usepackage{mdframed}
 \usepackage{enumerate}
