Expanded a little on malvertisement

--- a/content/content.tex
+++ b/content/content.tex
@@ -51,13 +51,22 @@ by any of the airlines included in the study.
 \subsection{Malvertisement}
 
 Would malvertisement be mainly directed toward
-fingerprints conaining certain characteristics
+fingerprints containing certain characteristics
 indicating they would be more vulnerable to an attack?
 It already seems that attackers have a preference
 for the Internet Explorer browser
 when targeting malvertisement.
-<<<<<<< HEAD
 \citep{li2012knowing}
+We need to know of the existence of at least
+one malvertisement currently active.
+That enables us to check for the existence of that malvertisement
+on a particular page at a specific time with a certain fingerprint.
+Without the knowledge of any active malvertisement ad
+this study would not be possible.
+Then we can propose a hypothesis
+stating we expect to see the ad more or less often
+when visiting a web page with a fingerprint with certain characteristics
+versus a fingerprint which does not have those characteristics.
 
 \subsection{A/B testing}
 Websites make use of A/B testing to figure out the impact
